# voico

./: .gitignore  Cargo.toml
.github/workflows/: rust.yml
config/: config.yaml
src/: audio_clip.rs  commands.rs  config.rs  db.rs  main.rs
